# MultiFastaCollector

./: README.md  example.py  multifasta.txt  pyproject.toml
multifasta_collector/: __init__.py  tool.py
multifasta_collector.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
