[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "multifasta-collector"
version = "1.0"
description = "A simple tool to parse multi-FASTA files into Python dictionaries."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Jimmy Capecci" }
]

[tool.setuptools]
packages = ["multifasta_collector"]